failures/clang_other_error__To1Es.i.stderr.txt
src/import/pull-common.c:463:48: error: expected ';' after expression
                        cmd[k++] = "--keyring=" VENDOR_KEYRING_PATH;
                                               ^
                                               ;
src/import/pull-common.c:463:49: error: use of undeclared identifier 'VENDOR_KEYRING_PATH'
                        cmd[k++] = "--keyring=" VENDOR_KEYRING_PATH;
                                                ^
2 errors generated.
